--- a/packages/editor/editor.css
+++ b/packages/editor/editor.css
@@ -1307,6 +1307,117 @@ input,
 	}
 }
 
+/* -------------------- ViewzoneShape ------------------- */
+
+.tl-viewzone__body {
+	fill: var(--palette-solid);
+	stroke: var(--color-text);
+	stroke-width: calc(1px * var(--tl-scale));
+}
+
+.tl-viewzone__background {
+	border-style: solid;
+	border-width: calc(1px * var(--tl-scale));
+	border-color: currentColor;
+	background-color: var(--palette-solid);
+	border-radius: calc(var(--radius-1) * var(--tl-scale));
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	position: absolute;
+	pointer-events: none;
+}
+
+.tl-viewzone__hitarea {
+	border-style: solid;
+	border-width: calc(8px * var(--tl-scale));
+	border-color: transparent;
+	background: none;
+	pointer-events: stroke;
+	box-sizing: border-box;
+	top: calc(-8px * var(--tl-scale));
+	left: calc(-8px * var(--tl-scale));
+	width: calc(100% + calc(16px * var(--tl-scale)));
+	height: calc(100% + calc(16px * var(--tl-scale)));
+	z-index: 1;
+	position: absolute;
+}
+
+.tl-viewzone-heading {
+	display: flex;
+	align-items: center;
+	position: absolute;
+	transform-origin: 0% 100%;
+	overflow: hidden;
+	max-width: 100%;
+	min-width: 32px;
+	height: auto;
+	font-size: 12px;
+	padding-bottom: 4px;
+	pointer-events: all;
+}
+
+.tl-viewzone-heading-hit-area {
+	pointer-events: all;
+	/* scale from bottom left corner so we can pin it to the top left corner of the viewzone */
+	transform-origin: 0% 100%;
+	display: flex;
+	height: 100%;
+	width: 100%;
+	align-items: center;
+	border-radius: var(--radius-1);
+	background-color: var(--color-background);
+}
+
+.tl-viewzone-label {
+	pointer-events: all;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	padding: var(--space-3) var(--space-3);
+	position: relative;
+	font-size: inherit;
+	white-space: pre;
+}
+
+.tl-viewzone-label__editing {
+	color: transparent;
+	outline: 1.5px solid var(--color-selection-stroke);
+	white-space: pre;
+	width: auto;
+	overflow: visible;
+	background-color: var(--color-panel);
+	border-radius: var(--radius-1);
+}
+
+.tl-viewzone-name-input {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	border: none;
+	background: none;
+	outline: none;
+	padding: var(--space-3) var(--space-3);
+	inset: 0px;
+	font-size: inherit;
+	font-family: inherit;
+	font-weight: inherit;
+	width: 100%;
+	color: var(--color-text-1);
+	border-radius: var(--radius-1);
+	user-select: all;
+	-webkit-user-select: text;
+	white-space: pre;
+}
+
+/* If mobile use 16px as font size */
+/* On iOS, font size under 16px in an input will make the page zoom into the input 🤦‍♂️ */
+/* https://css-tricks.com/16px-or-larger-text-prevents-ios-form-zoom/ */
+@media (max-width: 600px) {
+	.tl-viewzone-heading {
+		font-size: 16px;
+	}
+}
+
 /* ------------------ iFrames Detail ----------------- */
 
 .tl-embed {
