--- a/apps/social-video-board/src/styles.css
+++ b/apps/social-video-board/src/styles.css
@@ -23,3 +23,92 @@ html,
 	inset: 0;
 	overflow: hidden;
 }
+
+.tldraw {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.header {
+	height: 75px;
+	transition: box-shadow .4s ease;
+	-webkit-transition: box-shadow .4s ease;
+	position: relative;
+}
+
+.header:hover {
+	box-shadow: 0 0 2px 1px lightgrey;
+}
+
+.header-title {
+	display: flex;
+	height: 100%;
+	align-items: center;
+	margin-left: 12px;
+	font-size: 2em;
+	color: #444444;
+}
+
+.logo {
+	zoom: 0.3;
+}
+
+.newPage {
+	border: none;
+	background-color: transparent;
+	border-radius: 8px;
+	position: absolute;
+	right: 1em;
+	top: 1.5em;
+}
+
+.links {
+	display: grid;
+	width: fit-content;
+	list-style: none;
+	padding: 1em;
+	margin: 0;
+}
+
+.links a {
+	padding: 0.5em 0.7em;
+	margin-bottom: 0.5em;
+	color: #444444;
+	text-decoration: none;
+	font-size: 1.2em;
+	display: block;
+	border-radius: 8px;
+}
+
+.links a:hover, .newPage:hover, .links button {
+	background-color: rgba(144, 144, 144, 0.1);
+}
+
+.titleInput {
+	position: relative;
+}
+
+.links button, .links input {
+	background-color: transparent;
+	border: 2px solid #777777;
+	margin-bottom: 0.5em;
+	color: #444444;
+	font-size: 1.2em;
+	display: block;
+	position: absolute;
+	border-radius: 8px;
+}
+
+.links input {
+	left: 0;
+	width: 6em;
+}
+
+.links button{
+	left: 6.5em;
+}
