--- a/packages/editor/editor.css
+++ b/packages/editor/editor.css
@@ -73,6 +73,8 @@
 	--color-primary: #2f80ed;
 	--color-warn: #d10b0b;
 	--color-text: #000000;
+	--svb-color-button: #023047;
+	--svb-color-button-hover: #03466e;
 	--palette-black: #1d1d1d;
 	--palette-blue: #4263eb;
 	--palette-green: #099268;
