--- a/packages/editor/editor.css
+++ b/packages/editor/editor.css
@@ -1969,3 +1969,24 @@ it from receiving any pointer events or affecting the cursor. */
 	font-size: 0.7rem;
 	margin-bottom: 0 !important;
 }
+
+/* --------------------- SVPContainer --------------------- */
+
+.svp-container {
+	height: 100%;
+	aspect-ratio: 16/9;
+}
+
+.svp-container-content {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.svp-container-iframe {
+	width: 960px;
+	height: 100%;
+	border: none;
+}
